# tor

./: .gitignore  README.md  justfile  pubspec.yaml
.github/workflows/: check.yml
.reuse/: dep5
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/oxchat/tor/: SystemProxyPlugin.kt  TorPlugin.kt
cargokit/gradle/: plugin.gradle
example/: .gitignore
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/gradle/wrapper/: gradle-wrapper.properties
example/lib/: main.dart
example/macos/Runner/: AppDelegate.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ios/: tor.podspec
ios/Classes/: SystemProxyPlugin.swift  TorPlugin.swift
lib/: generated_bindings.dart  proxy_support.dart  socks_socket.dart  system_proxy_monitor.dart  tor.dart
lib/dart_api/: tor_api.dart
lib/dart_api/bridge_generated.dart/: bridge.dart  frb_generated.dart  frb_generated.io.dart
lib/platform/: system_proxy_channel.dart
lib/rust_api/: tor_api.dart
rust/: Cargo.toml
rust/src/: bridge.rs  frb_generated.rs  lib.rs  manager.rs  proxy_provider.rs
rust/src/api/: mod.rs  tor.rs  types.rs
